<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dialog_width"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_14"
    android:background="@drawable/rounded_corner_for_dialog"
    android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:background="@drawable/dotted_line"
        android:gravity="center"
        android:hint="@string/name"
        android:imeOptions="actionNext"
        android:layout_margin="@dimen/margin_10"
        android:inputType="text"
        android:textColor="@color/text_color"
        android:textColorHint="@color/dotted_line"
        android:textSize="@dimen/text_size" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:background="@drawable/dotted_line"
        android:gravity="center"
        android:hint="@string/email"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:layout_margin="@dimen/margin_10"
        android:textColor="@color/text_color"
        android:textColorHint="@color/dotted_line"
        android:textSize="@dimen/text_size" />

    <EditText
        android:id="@+id/recipe_name_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dotted_line"
        android:gravity="center"
        android:minHeight="100dp"
        android:layout_margin="@dimen/margin_10"
        android:hint="@string/message"
        android:imeOptions="actionDone"
        android:inputType="textMultiLine"
        android:textColor="@color/text_color"
        android:textColorHint="@color/dotted_line"
        android:textSize="@dimen/text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="@dimen/text_view_height"
            android:layout_weight=".33"
            android:background="@drawable/rounded_corner_for_dialog_button"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/send_button"
            android:layout_width="0dp"
            android:layout_height="@dimen/text_view_height"
            android:layout_weight=".33"
            android:gravity="center"
            android:background="@drawable/rounded_corner_for_dialog_button"
            android:text="@string/send"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size" />
    </LinearLayout>

</LinearLayout>