<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dialog_width"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_14"
    android:background="@drawable/rounded_corner_for_dialog"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_view_height"
        android:layout_weight=".33"
        android:background="@color/white"
        android:gravity="center"
        android:layout_margin="@dimen/margin_10"
        android:text="@string/choose_option"
        android:textColor="@color/text_color"
        android:textSize="@dimen/text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal">

        <TextView
            android:id="@+id/gallery_button"
            android:layout_width="0dp"
            android:layout_height="@dimen/text_view_height"
            android:layout_weight=".33"
            android:background="@drawable/rounded_corner_for_dialog_button"
            android:gravity="center"
            android:text="@string/gallery"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/camera_button"
            android:layout_width="0dp"
            android:layout_height="@dimen/text_view_height"
            android:layout_weight=".33"
            android:background="@drawable/rounded_corner_for_dialog_button"
            android:gravity="center"
            android:text="@string/camera"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size" />
    </LinearLayout>

</LinearLayout>