<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:overScrollMode="never"
    android:scrollbars="none">

    <RelativeLayout
        android:id="@+id/view_group_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <RelativeLayout
            android:id="@+id/camera_group_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/recipe_imageview"
                android:layout_width="match_parent"
                android:layout_height="@dimen/recipe_image_height"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:background="@drawable/img_1" />

            <ImageView
                android:id="@+id/camera_icon_imageview"
                android:layout_width="@dimen/camera_width"
                android:layout_height="@dimen/camera_width"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="@drawable/img_2" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/camera_group_layout"
            android:padding="@dimen/padding_14">

            <EditText
                android:id="@+id/recipe_name_edittext"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:background="@drawable/dotted_line"
                android:gravity="center"
                android:hint="@string/recipe_name"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:textColor="@color/text_color"
                android:textColorHint="@color/dotted_line"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/recipe_type_textview"
                android:layout_width="match_parent"
                android:layout_height="@dimen/text_view_height"
                android:layout_below="@+id/recipe_name_edittext"
                android:layout_marginTop="@dimen/margin_10"
                android:background="@drawable/dotted_line"
                android:gravity="center"
                android:hint="@string/recipe_type"
                android:textColor="@color/text_color"
                android:textColorHint="@color/dotted_line"
                android:textSize="@dimen/text_size" />

            <LinearLayout
                android:id="@+id/difficulty_level_group_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/recipe_type_textview"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/beginner_textview"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/text_view_height"
                    android:layout_marginTop="@dimen/margin_10"
                    android:layout_weight=".33"
                    android:background="@drawable/rounded_corner_selected"
                    android:gravity="center"
                    android:tag="1"
                    android:text="@string/difficulty_level_button1"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:id="@+id/sous_chef_textview"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/text_view_height"
                    android:layout_margin="@dimen/margin_10"
                    android:layout_marginTop="@dimen/margin_10"
                    android:layout_weight=".33"
                    android:background="@drawable/rounded_corner_unselected"
                    android:gravity="center"
                    android:tag="2"
                    android:text="@string/difficulty_level_button2"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:id="@+id/master_textview"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/text_view_height"
                    android:layout_marginTop="@dimen/margin_10"
                    android:layout_weight=".33"
                    android:background="@drawable/rounded_corner_unselected"
                    android:gravity="center"
                    android:tag="3"
                    android:text="@string/difficulty_level_button3"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/text_size" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/serve_and_cooking_time_group_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/difficulty_level_group_layout"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/serves_group_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10"
                    android:layout_weight=".4"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="@dimen/serve_image_size"
                        android:layout_height="@dimen/serve_image_size"
                        android:layout_marginLeft="@dimen/margin_10"
                        android:src="@drawable/img_4" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/text_view_height"
                        android:layout_marginLeft="@dimen/margin_10"
                        android:background="@drawable/dotted_line"
                        android:gravity="center"
                        android:text="@string/serves"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/text_size" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/cooking_time_group_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_10"
                    android:layout_marginTop="@dimen/margin_10"
                    android:layout_weight=".5"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="@dimen/serve_image_size"
                        android:layout_height="@dimen/serve_image_size"
                        android:src="@drawable/img_5" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/text_view_height"
                        android:layout_marginLeft="@dimen/margin_10"
                        android:layout_marginRight="@dimen/margin_10"
                        android:background="@drawable/dotted_line"
                        android:gravity="center"
                        android:text="@string/cooking_time"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/text_size" />
                </LinearLayout>

            </LinearLayout>

            <EditText
                android:id="@+id/notes_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/serve_and_cooking_time_group_layout"
                android:layout_marginTop="@dimen/margin_10"
                android:background="@drawable/dotted_line"
                android:gravity="center"
                android:hint="@string/notes"
                android:imeOptions="actionDone"
                android:inputType="textMultiLine"
                android:minHeight="@dimen/note_edit_text_height"
                android:textColor="@color/text_color"
                android:textColorHint="@color/dotted_line"
                android:textSize="@dimen/text_size" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/notes_edittext"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="@dimen/margin_10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:text="1/3"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_size" />

                <LinearLayout
                    android:id="@+id/next_button_group_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:text="@string/next" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/next_button_image_size"
                        android:src="@drawable/img_6" />

                </LinearLayout>

            </RelativeLayout>

        </RelativeLayout>

    </RelativeLayout>

</ScrollView>
